update gui tour, optimization

--- a/style-your-html.ipynb
+++ b/style-your-html.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
       "8 = Tour of the GUI \n",
       "9 = Viewing Data Tutorial \n",
       "\n",
-      "Your response: 3\n"
+      "Your response: 5\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,14 +76,15 @@
      "text": [
       "Select file from the list below \n",
       "\n",
-      "1 = alpha_and_beta.html \n",
-      "2 = .DS_Store \n",
+      "1 = ERPYes20Trials_173ms_opt4_window15ms.param \n",
+      "2 = optimization.html \n",
       "3 = images \n",
-      "4 = alpha_and_beta.md \n",
-      "5 = combined.html \n",
+      "4 = .ipynb_checkpoints \n",
+      "5 = optimization_v0.html \n",
+      "6 = optimization.md \n",
       "\n",
-      "Your response: 1\n",
-      "You chose: alpha_and_beta.html\n"
+      "Your response: 2\n",
+      "You chose: optimization.html\n"
      ]
     }
    ],
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,17 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/dylandaniels/Documents/github-repos/hnn-tutorials/alpha_and_beta/body_alpha_and_beta.html\n",
-      "/Users/dylandaniels/Documents/github-repos/hnn-tutorials/alpha_and_beta/alpha_and_beta.html\n",
-      "alpha_and_beta.html\n",
-      "body_alpha_and_beta.html\n"
+      "/Users/dylandaniels/Documents/github-repos/hnn-tutorials/optimization/body_optimization.html\n",
+      "/Users/dylandaniels/Documents/github-repos/hnn-tutorials/optimization/optimization.html\n",
+      "optimization.html\n",
+      "body_optimization.html\n"
      ]
     }
    ],
